# Face-recognition

./: README.md
Source code/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  FaceDatabase.cpp  FaceDatabase.h  FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
